--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.5",
     "firebase": "^9.9.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "sass": "^1.53.0"
+    "react-hook-form": "^7.33.1",
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.53.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
